--- a/src/main/webapp/sass/Portal1.scss
+++ b/src/main/webapp/sass/Portal1.scss
@@ -96,7 +96,7 @@ end sticky footer
 }
 
 /* Bootstrap overrides */
-#rootPanel {
+#body {
 	.panel {
 		border: 1px solid transparent;
 		box-shadow: none;
