--- a/src/main/webapp/sass/Portal2.scss
+++ b/src/main/webapp/sass/Portal2.scss
@@ -128,6 +128,9 @@ end sticky footer
 	.tooltip-inner {
 		max-width: inherit;
 	}
+	.form-control-readonly {
+		cursor: text;
+	}
 }
 /* End bootstrap overrides */
 
