--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -45,10 +45,10 @@
 								<g:Image ui:field="certificationBadge" resource='{sageImageBundle.certificate}' addStyleNames="displayInline imageButton margin-top-10 vertical-align-top moveup-8 margin-right-10" height="32px" width="25px"/>
 					        	<b:Heading ui:field="displayNameField" addStyleNames="displayInline" size="H2" />
 					        	<b:Heading ui:field="headlineField" size="H4" />
-					        	<b:Alert type="INFO" ui:field="verifyAlert">
+					        	<b:Alert type="INFO" ui:field="verifyAlert" addStyleNames="synapse-blue-bg">
 									<bh:Div>
 									    <b:Heading size="H5" addStyleNames="boldText color-white" text="Profile validation" />
-									    <b:Button ui:field="dismissValidationUIButton" styleName="close pull-right moveup-35" text="x"/>
+									    <b:Button ui:field="dismissValidationUIButton" styleName="close pull-right moveup-35 color-white fullOpacity" text="x"/>
 										<bh:Paragraph>
 											<bh:Text>Certified users with a validated profile can access more features and data.</bh:Text>
 											<b:Anchor ui:field="requestProfileValidationLink1" text="Validate your profile today!" addStyleNames="color-white"/>
@@ -76,17 +76,17 @@
 										<v:VerificationIDCardViewImpl ui:field="idCard"/>
 										<b:Button ui:field="verifiedBadge" addStyleNames="margin-right-5" icon="CHECK_SQUARE_O"
 											type="PRIMARY" size="SMALL">Profile Validated</b:Button>
-										<b:Button ui:field="verificationSubmittedButton" type="INFO"
+										<b:Button ui:field="verificationSubmittedButton" type="PRIMARY"
 											size="SMALL" addStyleNames="margin-right-5">Profile Validation Pending</b:Button>
 										<b:Button ui:field="verificationRejectedButton" type="WARNING"
 											size="SMALL" addStyleNames="margin-right-5">Profile Validation Rejected</b:Button>
 										<b:Button ui:field="verificationSuspendedButton" type="WARNING"
 											size="SMALL" addStyleNames="margin-right-5">Validated Profile Suspended</b:Button>
-										<b:Button ui:field="resubmitProfileValidationButton" type="INFO"
+										<b:Button ui:field="resubmitProfileValidationButton" type="PRIMARY"
 											size="SMALL" addStyleNames="margin-right-5">Revalidate My Profile</b:Button>
 										<b:Button ui:field="verificationApprovedButton" type="DEFAULT"
 											size="SMALL" addStyleNames="margin-right-5">Profile Validation Details</b:Button>
-										<b:Button ui:field="submitProfileValidationButton" type="INFO"
+										<b:Button ui:field="submitProfileValidationButton" type="PRIMARY"
 											size="SMALL">Validate My Profile</b:Button>
 									</bh:Div>
 								</bh:Div>
@@ -112,7 +112,7 @@
 				        	<b:Container fluid="true">
 					        	<b:Row>
 					        		<b:Column size="XS_12">
-					        			<b:Button ui:field="editProfileButton" icon="EDIT" type="INFO" pull="RIGHT" >Edit Profile</b:Button>
+					        			<b:Button ui:field="editProfileButton" icon="EDIT" type="PRIMARY" pull="RIGHT" >Edit Profile</b:Button>
 					        			<b:Button ui:field="linkORCIDButton" pull="RIGHT" addStyleNames="margin-right-10">Link to ORCID</b:Button>
 					        		</b:Column>
 					        	</b:Row>
