use scss variable

--- a/src/main/webapp/sass/Portal4.scss
+++ b/src/main/webapp/sass/Portal4.scss
@@ -2009,7 +2009,7 @@ div.input-group > input.search-textbox {
 }
 
 .text-warning, #rootPanel .text-warning {
-	color: #e0b603;
+	color: $synapse-yellow;
 }
 
 /**Override JQuery table styles **/
