--- a/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
@@ -16,10 +16,12 @@
 					<g:FocusPanel ui:field="organizeResearchAssetsBox">
 						<bh:Div addStyleNames="imageButton margin-left-10 margin-right-10">
 							<g:Image resource='{sageImageBundle.directory}' addStyleNames="center-in-div" />
-							<b:Heading size="H4" addStyleNames="margin-top-30 font-weight-bolder margin-bottom-10-imp"
-								text="Organize your digital research assets"
-							></b:Heading>
-							<bh:Paragraph addStyleNames="margin-top-3" text="Create a free Synapse Project to store your research data, code, and results." />
+							<bh:Div addStyleNames="center-in-div max-width-350">
+								<b:Heading size="H4" addStyleNames="margin-top-30 font-weight-bolder margin-bottom-10-imp"
+									text="Organize your digital research assets"
+								></b:Heading>
+								<bh:Paragraph addStyleNames="margin-top-3" text="Create a free Synapse Project to store your research data, code, and results." />
+							</bh:Div>
 						</bh:Div>
 					</g:FocusPanel>
 				</b:Column>
@@ -27,10 +29,12 @@
 					<g:FocusPanel ui:field="creditForResearchBox">
 						<bh:Div addStyleNames="imageButton">
 							<g:Image resource='{sageImageBundle.prov}' addStyleNames="center-in-div" />
-							<b:Heading size="H4" addStyleNames="margin-top-30 font-weight-bolder margin-bottom-10-imp"
-								text="Get credit for your research"
-							></b:Heading>
-							<bh:Paragraph addStyleNames="margin-top-3" text="Mint a DOI for your work - and describe exactly what you did using Synapse provenance." />
+							<bh:Div addStyleNames="center-in-div max-width-350">
+								<b:Heading size="H4" addStyleNames="margin-top-30 font-weight-bolder margin-bottom-10-imp"
+									text="Get credit for your research"
+								></b:Heading>
+								<bh:Paragraph addStyleNames="margin-top-3" text="Mint a DOI for your work - and describe exactly what you did using Synapse provenance." />
+							</bh:Div>
 						</bh:Div>
 					</g:FocusPanel>
 				</b:Column>
@@ -38,10 +42,12 @@
 					<g:FocusPanel ui:field="collaborateBox">
 						<bh:Div addStyleNames="imageButton margin-left-10 margin-right-10">
 							<g:Image resource='{sageImageBundle.collaborate}' addStyleNames="center-in-div" />
-							<b:Heading size="H4" addStyleNames="margin-top-30 font-weight-bolder margin-bottom-10-imp" 
-								text="Collaborate"
-							></b:Heading>
-							<bh:Paragraph addStyleNames="margin-top-3" text="Share your Project with your collaborators, or make it Public!" />
+							<bh:Div addStyleNames="center-in-div max-width-350">
+								<b:Heading size="H4" addStyleNames="margin-top-30 font-weight-bolder margin-bottom-10-imp" 
+									text="Collaborate"
+								></b:Heading>
+								<bh:Paragraph addStyleNames="margin-top-3" text="Share your Project with your collaborators, or make it Public!" />
+							</bh:Div>
 						</bh:Div>
 					</g:FocusPanel>
 				</b:Column>
