--- a/src/main/webapp/sass/Portal5.scss
+++ b/src/main/webapp/sass/Portal5.scss
@@ -134,6 +134,14 @@ end sticky footer
 	.alert-warning {
 		background-color:$synapse-yellow;
 	}
+	.btn-default {
+		background-color: #ebebeb;
+	}
+	.btn-default.active, .btn-default:active, .btn-default:focus, .btn-default:hover, .open .dropdown-toggle.btn-default {
+		color: white;
+		background-color: $synapse-blue;
+		border-color: #186292;
+	}
 }
 /* End bootstrap overrides */
 
