--- a/src/main/webapp/sass/Portal6.scss
+++ b/src/main/webapp/sass/Portal6.scss
@@ -137,7 +137,7 @@ end sticky footer
 	.btn-default {
 		background-color: #ebebeb;
 	}
-	.btn-default.active, .btn-default:active, .btn-default:focus, .btn-default:hover, .open .dropdown-toggle.btn-default {
+	.btn-default:hover, .open .dropdown-toggle.btn-default {
 		color: white;
 		background-color: $synapse-blue;
 		border-color: #186292;
