--- a/src/main/webapp/sass/Portal7.scss
+++ b/src/main/webapp/sass/Portal7.scss
@@ -145,28 +145,36 @@ end sticky footer
 	.has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-warning .form-control-feedback {
 		color: #eb5757;
 	}
-
-	.checkbox {
+	#body .checkbox, #body .radio {
 		padding-left: 0px;
 	}
-	input[type="checkbox"] {
+	input[type="checkbox"], input[type="radio"] {
 		display:none;
 	}
-	input[type="checkbox"] + label::before, input[type="checkbox"] + span::before {
+	.checkbox label::before, .radio label::before {
 		content: "";
-		float: left;
+		display: inline-block;
+		vertical-align: middle;
 		width: 16px;
 		height: 16px;
-		margin: 0 5px 0 0;
-		background: url(images/checkbox-unchecked.png) no-repeat 0 0;
+		border: 1px solid #888;
+		border-radius: 10px;
+		background: radial-gradient(#eee, #aaa);
+		margin-right: 5px;
+	}
+	
+	.checkbox label::before, .radio label::before {
+		border-radius: 50%;
 	}
 	input[type="checkbox"]:checked + label::before, input[type="checkbox"]:checked + span::before {
-		content: "";
-		float: left;
-		width: 16px;
-		height: 16px;
-		margin: 0 5px 0 0;
-		background: url(images/checkbox-checked.png) no-repeat 0 0;
+		content: "✓";
+		color: $synapse-blue;
+		text-align: center;
+		font-size: 20px;
+		margin-left: -13px;
+	}
+	input[type="radio"]:checked + label::before, input[type="radio"]:checked + span::before {
+		background-image: radial-gradient($synapse-blue-end-gradient, $synapse-blue);
 	}
 }
 /* End bootstrap overrides */
