download notification component updated when items are successfully added to the download list

--- a/src/main/webapp/sass/Portal9.scss
+++ b/src/main/webapp/sass/Portal9.scss
@@ -1727,11 +1727,11 @@ ol.lowerroman {
 	margin-top: 10px !important;
 }
 
-.vertical-align-middle {
+#body .vertical-align-middle {
 	vertical-align: middle;
 }
 
-.vertical-align-top {
+#body .vertical-align-top {
 	vertical-align: top;
 }
 
