--- a/src/main/webapp/sass/Portal9.scss
+++ b/src/main/webapp/sass/Portal9.scss
@@ -1256,7 +1256,9 @@ h1, h2, h3, h4, h5, h6 {
 .max-height-100 {
 	max-height: 100px;
 }
-
+.max-height-500, #rootPanel .max-height-500 {
+	max-height: 500px;
+}
 .wikifilepreview {
 	width: 940px;
 }
