attempt for minor fix to download list column layout in smaller viewports

--- a/src/main/webapp/sass/Portal9.scss
+++ b/src/main/webapp/sass/Portal9.scss
@@ -578,10 +578,12 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 .min-width-25 {
 	min-width: 25px;
 }
+.min-width-70 {
+	min-width: 70px;
+}
 .min-width-100 {
 	min-width: 100px;
 }
-
 .min-width-150 {
 	min-width: 150px;
 }
