--- a/src/main/webapp/sass/Portal9.scss
+++ b/src/main/webapp/sass/Portal9.scss
@@ -887,7 +887,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 		border-radius: 3px 3px 3px 3px;
 		padding: 0 5px 2px;
 		overflow:auto;
-		white-space:pre;
+		white-space:pre-wrap;
 		word-wrap: normal;
 	}
 
