--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -354,7 +354,7 @@ end sticky footer
 }
 
 .userProfileImage, #rootPanel .userProfileImage {
-	border-radius: 3px;
+	border-radius: 50%;
 	max-width: none;
 }
 
