--- a/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
@@ -357,7 +357,7 @@
 									<g:Image resource='{sageImageBundle.prov}' addStyleNames="margin-10" height="74px" width="75px"/>
 								</t:TableData>
 								<t:TableData paddingRight="2">
-									<b:Heading size="H4" addStyleNames="font-weight-bolder" text="Mint a doi"></b:Heading>
+									<b:Heading size="H4" addStyleNames="font-weight-bolder" text="Mint a DOI"></b:Heading>
 									<bh:Paragraph text="A digital object identifier (DOI) provides provides a persistent and easy way to reference your digital assets in publications - including data, code, or analysis results." />
 								</t:TableData>
 							</t:TableRow>
