clear view on reset, use circle checkmark, fix test

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -988,7 +988,7 @@ span.font-size-58,
 .font-size-18 {
 	font-size: 18px;
 }
-.font-size-17 {
+.font-size-17, #body .font-size-17 {
 	font-size: 17px;
 }
 .font-size-16 {
